# holonym-relayer

./: .env.example  .gitignore  Dockerfile.daemon  Dockerfile.relayer  README.md  copy-leaves.js  diffRemoteContracts  docker-compose.yml  dynamodb.js  hardhat.config.js  index-v2.js  index.js  package-lock.json  package.json  tree-insert.js  xc-state.js  xccontract.js
.github/workflows/: deploy.yml
artifacts/contracts/AddLeafBig.sol/: AddLeafBig.dbg.json  AddLeafBig.json
artifacts/contracts/AddLeafSmall.sol/: AddLeafSmall.json
artifacts/contracts/AntiSybilStore.sol/: AntiSybilStore.json
artifacts/contracts/AssertLeafContainsCredsVerifier.sol/: AssertLeafContainsCredsVerifier.json
artifacts/contracts/AssertLeafFromAddressVerifier.sol/: AssertLeafFromAddressVerifier.json
artifacts/contracts/Hub.sol/: Hub.dbg.json  Hub.json
artifacts/contracts/IVerifier.sol/: IVerifier.json
artifacts/contracts/IsUSResident.sol/: IsUSResident.json
artifacts/contracts/MerkleTree.sol/: MerkleTree.json
backup-trees/: hardhat.json  undefined.json
cache/: solidity-files-cache.json
constants/: abis.js  abis.json  contract-addresses.json  misc.js
constants/abis/: IsUSResidentV2.json  SybilResistancePhone.json  SybilResistanceV2.json  nft.json
daemon/: Cargo.toml
daemon/src/: main.rs
scripts/: build.sh  deploy-testing-contracts.js  run.sh
test/: integration.js  read.js  remoteContractParity.js  test-creds-v2.json  test-leaves.json  write.js
utils/: contract-addresses.js  get-ethers.js  nft.js  proofs.js  test-utils.js  utils.js
zk/: out.r1cs
(+24 files in other folders)
